2014-07-12:
	Tiago Ilieve:
		* Fixes #96: AddBackports is now a common task
2014-07-09:
	Anders Ingemann:
		* Allow passing data into the manifest
		* Refactor logging setup to be more modular
		* Convert every JSON file to YAML
		* Convert "provider" into provider specific section
2014-07-02:
	Vladimir Vitkov:
		* Improve grub options to work better with virtual machines
2014-06-30:
	Tomasz Rybak:
		* Return information about created image
2014-06-22:
	Victor Marmol:
		* Enable the memory cgroup for the Docker plugin
2014-06-19:
	Tiago Ilieve:
		* Fixes #94: allow stable/oldstable as release name on manifest
	Vladimir Vitkov:
		* Improve ami listing performance
2014-06-07:
	Tiago Ilieve:
		* Download `gsutil` tarball to workspace instead of working directory
		* Fixes #97: remove raw disk image created by GCE after build
2014-06-06:
	Ilya Margolin:
		* pip_install plugin
2014-05-23:
	Tiago Ilieve:
		* Fixes #95: check if the specified APT proxy server can be reached
2014-05-04:
	Dhananjay Balan:
		* Salt minion installation & configuration plugin
		* Expose debootstrap --include-packages and --exclude-packages options to manifest
2014-05-03:
	Anders Ingemann:
		* Require hostname setting for vagrant plugin
		* Fixes #14: S3 images can now be bootstrapped outside EC2.
		* Added enable_agent option to puppet plugin
2014-05-02:
	Tomasz Rybak:
		* Added Google Compute Engine Provider